--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
 	<title>contact me</title>
-	<link rel="stylesheet" href="css/styles.css" >
+	<link rel="stylesheet" href="styles.css" >
  </head>
  <body>
 	<h3>Contact Me</h3>
