--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
  	<meta charset="utf-8">
-	<title>Welcome To My Website</title>
+	<title>Mohommad Hasan-A web designer</title>
 	<link rel="stylesheet" href="styles.css" >
  </head>
  <body>
@@ -13,7 +13,7 @@
  	 	</td>
  	 	<td>			
   	<h1>Mohommad Hasan</h1>
-  	<p><em>Co-Founder & CEO of<strong> Royale Groups of Industries-RGI</strong></em></p>	
+  	<p><em>Co-Founder & CEO of<strong> Royale Apreal Factory</strong></em></p>	
  	 	</td>
  	 </tr>
  	</table>
@@ -48,7 +48,7 @@
 	  </tr>
 	  <tr>
 	   <td>2021-still</td>
-	   <td>CEO at Royale Groups of Industries</td>
+	   <td>CEO at Royale Apreal Factory</td>
 	  </tr>
 	 </tbody>
 	</table>
